--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,12 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*.png",
+                "input": "node_modules/intl-tel-input/build/img/",
+                "output": "./assets/flags/"
+              }
             ],
             "styles": [
               "src/styles.css"
@@ -106,5 +111,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
