--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "formulario",
   "version": "0.0.0",
+  
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -22,17 +23,21 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.3",
     "express": "^4.18.2",
+    "intl-tel-input": "^19.2.19",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^17.0.1",
     "@angular-devkit/build-angular": "^17.0.3",
     "@angular/cli": "^17.0.3",
     "@angular/compiler-cli": "^17.0.0",
     "@types/express": "^4.17.17",
+    "@types/intl-tel-input": "^18.1.4",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "file-loader": "^6.2.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
